* Use today as fallback for sale date report

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Add reporting
* Check pending sale to erase party
* Add wizard to modify sale header after filling lines
* Make description on sale line optional
* Invoice shipped product instead of sold product

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Plan backorder moves to today
* Add cron task to process confirmed sale
* Add report_address property on sale

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Add sale price on product view from line
* Allow no lead time on product

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Manage readonly state on Sale Line
* Allow sale without payment term

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Rename Sale reference into number and add reference
* Add Python3 support
* Replace Delivery Time by Lead Time on Product Template
* Rename Delivery Date of Sale Line into Shipping Date

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Delivery Date of Line shows effective date if possible
* Add shipment party

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Add support for PyPy
* Add origin on sale
* Support mixed invoice type by line in invoiced quantity calculation
* Use TaxableMixin

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)
* Add link between stock moves and invoice lines
* Add warning for customer moves without origin

Version 3.0.0 - 2013-10-21
* Bug fixes (see mercurial logs for details)
* Replace reference copying by relate

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)
* Use origin Reference on Invoice Line and Stock Move

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)

Version 2.4.0 - 2012-04-24